fix alignment of cards and phase-select

--- a/homebrew_challenge/src/components/RouteMapRules/RouteMapRules.css
+++ b/homebrew_challenge/src/components/RouteMapRules/RouteMapRules.css
@@ -36,7 +36,7 @@
   width: 100%;
   border: 1px solid LightGray;
   padding: 10px;
-  margin: 0 5px;
+  margin: 0;
 }
 
 .select-phase {
